# nanopb-extension

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Vendors/: CMakeLists.txt
nanopb-extension/: CMakeLists.txt
nanopb-extension-tests/: CMakeLists.txt
nanopb-extension-tests/include/: tests.h  utils.h
nanopb-extension-tests/proto/: generate_proto.py  test.options  test.pb.c  test.pb.h  test.proto
nanopb-extension-tests/source/: main.cpp  tests.cpp  utils.cpp
nanopb-extension/include/nanopb-extension/: pb_bytes_extension.h  pb_common_header.h  pb_repeated_extension.h  pb_string_extension.h  pb_submessage_extension.h
nanopb-extension/source/: nanopb-extension.cpp  pb_bytes_extension.cpp  pb_repeated_extension.cpp  pb_string_extension.cpp  pb_submessage_extension.cpp
